--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "doc": "docs"
   },
   "scripts": {
+    "lint": "eslint src",
     "test": "test",
     "start": "node src/index.js",
     "dev": "npm run resolve-swagger-references && WT_CONFIG=dev node src/index.js",
@@ -24,7 +25,13 @@
   "homepage": "https://github.com/windingtree/orgid-explorer-cache#readme",
   "devDependencies": {
     "@windingtree/wt-hotel-schemas": "^0.8.3",
-    "@windingtree/wt-shared-schemas": "^0.7.2"
+    "@windingtree/wt-shared-schemas": "^0.7.2",
+    "eslint": "^6.2.1",
+    "eslint-config-standard": "^14.0.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-node": "^9.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1"
   },
   "dependencies": {
     "cors": "^2.8.5",
