--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "doc": "docs"
   },
   "scripts": {
-    "lint": "eslint src",
-    "test": "test",
+    "lint": "eslint src test",
+    "test": "rimraf .nyc_output && WT_CONFIG=test ./node_modules/.bin/nyc --reporter=text ./node_modules/mocha/bin/mocha --recursive --timeout 20000",
+    "test-watch": "WT_CONFIG=test ./node_modules/mocha/bin/mocha --recursive --timeout 20000 --watch",
+    "coverage": "nyc report --reporter=text-lcov | coveralls",
     "start": "node src/index.js",
     "dev": "npm run resolve-swagger-references && WT_CONFIG=dev node src/index.js",
     "resolve-swagger-references": "node management/resolve-swagger-references.js"
@@ -26,18 +28,27 @@
   "devDependencies": {
     "@windingtree/wt-hotel-schemas": "^0.8.3",
     "@windingtree/wt-shared-schemas": "^0.7.2",
+    "chai": "^4.2.0",
+    "coveralls": "^3.0.6",
     "eslint": "^6.2.1",
     "eslint-config-standard": "^14.0.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-node": "^9.1.0",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1"
+    "eslint-plugin-standard": "^4.0.1",
+    "knex": "^0.19.2",
+    "mocha": "^6.2.0",
+    "nyc": "^14.1.1",
+    "sinon": "^7.4.1",
+    "supertest": "^4.0.2"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-slash": "^2.0.1",
     "morgan": "^1.9.1",
+    "sqlite3": "^4.1.0",
     "swagger-ui-express": "^4.0.7",
     "winston": "^3.2.1",
     "yamljs": "^0.3.0"
