--- a/docs/source.yaml
+++ b/docs/source.yaml
@@ -175,7 +175,7 @@ components:
         address:
           $ref: '@windingtree/wt-shared-schemas/swagger.yaml#/components/schemas/EthereumAddressType'
         lifDepositValue:
-          description: Current Lif deposit value (in Lif-wei)
+          description: Current Lif deposit value. The balance is returned in `10^-18` denomination (LífWei, if you will)
           type: number
         segments:
           description: Comma separated names of segments this ORG.ID is registered in
