--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "rimraf .nyc_output && WT_CONFIG=test ./node_modules/.bin/nyc --reporter=text ./node_modules/mocha/bin/mocha --recursive --timeout 20000",
     "test-watch": "WT_CONFIG=test ./node_modules/mocha/bin/mocha --recursive --timeout 20000 --watch",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
-    "start": "node src/index.js",
+    "start": "npm run resolve-swagger-references && WT_CONFIG=prod node src/index.js",
     "dev": "npm run resolve-swagger-references && WT_CONFIG=dev node src/index.js",
     "resolve-swagger-references": "node management/resolve-swagger-references.js"
   },
