--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "start": "npm run resolve-swagger-references && WT_CONFIG=prod node src/index.js",
     "dev": "npm run resolve-swagger-references && WT_CONFIG=dev node src/index.js",
     "resolve-swagger-references": "node management/resolve-swagger-references.js",
-    "deploy-aws-production": "./management/deploy-aws.sh production"
+    "deploy-aws-production": "./management/deploy-aws.sh prod"
   },
   "repository": {
     "type": "git",
